[package]
name = "graphstack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.17.0"
petgraph = "0.6.2"
revm = "2.1.0"
arrayref  = "0.3"
hex = "0.4.3"
primitive-types = { version = "0.11", default-features = false, features = ["rlp"] }
bytes = "1.2.1"
